fix alignment of connect wallet button

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -73,7 +73,7 @@
 .Modal-title {
   text-align: left;
   font-size: 1.5rem;
-  line-height: 2.325rem;
+  line-height: 1;
 }
 
 .Modal-close-button {
